show owns/wanted items on somene elses items list

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -196,8 +196,9 @@ ul.buttons
   .nc-icon
     right: ($object-width - $object-img-size) / 2 + $object-padding
 
+  $closeted-icons-left: ($object-width - $object-img-size) / 2 + $object-padding
   .closeted-icons
-    left: ($object-width - $object-img-size) / 2 + $object-padding
+    left: $closeted-icons-left
 
 dt
   font-weight: bold
