--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -50,8 +50,51 @@ body.items-show
     font:
       family: $text-font
       size: 85%
-    p:first-child
-      margin-bottom: .25em
+    margin-bottom: 1em
+
+    p
+      display: inline
+
+      &:first-child
+        margin-right: 1em
+  #trade-hangers
+    font-size: 85%
+    text-align: left
+
+    p
+      position: relative
+
+      &:first-child
+        margin-bottom: .5em
+
+      &.overflows
+        .toggle
+          display: block
+
+      &.showing-more
+        .toggle
+          .less
+            display: block
+
+          .more
+            display: none
+
+    .toggle
+      background: white
+      bottom: 0
+      cursor: pointer
+      display: none
+      font-family: $main-font
+      padding: 0 1em
+      position: absolute
+      right: 0
+
+      &:hover
+        text-decoration: underline
+
+      .less
+        display: none
+
   #item-preview-header
     margin-top: 3em
     h3, a
@@ -67,6 +110,7 @@ body.items-show
     border: 1px solid $module-border-color
     float: right
     font-size: 85%
+    margin-left: 1em
     padding: 1em
     width: 21em
 
@@ -85,4 +129,13 @@ body.items-show
 
     input[type=number]
       width: 4em
+
+  &.js
+    #trade-hangers
+      p
+        max-height: 3em
+        overflow: hidden
+
+        &.showing-more
+          max-height: none
 
