--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,9 +71,9 @@
           Contact:
           %ul
             %li
-              %a{:href => "http://openneo.uservoice.com/forums/40720-dress-to-impress"} Suggestions
+              %a{:href => feedback_url} Suggestions
             %li
-              %a{:href => "mailto:webmaster@openneo.net"} Questions, comments, bugs
+              %a{:href => "mailto:#{contact_email}"} Questions, comments, bugs
         %p
           Images &copy; 2000-2010 Neopets, Inc. All Rights Reserved.
           Used With Permission
